# re2-wasm

./: .gitignore  CMakeLists.txt  README.md  build-ci.sh  main.cpp
re2-wasm/: index.js  package.json  re2_wasm.js  re2_wasm.wasm
